--- a/public/index.html
+++ b/public/index.html
@@ -1874,6 +1874,9 @@ async function subscribeToReports() {
 // ===== ENHANCED SUMMARY PAGE WITH CHARTS AND PDF EXPORT =====
 
 // Global chart instances
+// ===== ENHANCED SUMMARY PAGE WITH CHARTS AND PDF EXPORT =====
+
+// Global chart instances
 let stateChart, trendChart, categoryChart;
 
 // State name mapping
